--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,24 @@
-dist/
-temp/
+# Binaries
+bin/
+
+# Tests
+coverage.out
+coverage.html
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Environment
+.env
+.env.local
+
+# Other
+tmp/
