--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -1,4 +1,4 @@
-name: CI
+name: Check
 on:
   push:
     branches: ["main"]
@@ -6,7 +6,7 @@ on:
     branches: ["*"]
 jobs:
   checks:
-    name: CI checks
+    name: Run checks
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -14,6 +14,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
+
       - name: Set up Go
         uses: actions/setup-go@v6
         with:
@@ -34,5 +35,6 @@ jobs:
 
       - name: Lint code
         run: go vet ./...
+
       - name: Test code
         run: go test -v -cover ./...
